Updated the schema of the objectives data to make the process of storing it easier.
